[gd_scene load_steps=21 format=3 uid="uid://cu6sas5er0ifn"]

[ext_resource type="Texture2D" uid="uid://2siv56qv56ha" path="res://barkley2/assets/b2_original/images/merged/s_pedestrianLoiterStand.png" id="1_lh6ph"]
[ext_resource type="Script" path="res://barkley2/scenes/Objects/_interactiveActor/_pedestrians/o_pedestrian_loiterer.gd" id="2_xg1j2"]
[ext_resource type="PackedScene" uid="uid://c54kloot7bcu2" path="res://barkley2/scenes/Objects/System/o_shadow.tscn" id="3_vcs1l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_prooq"]
atlas = ExtResource("1_lh6ph")
region = Rect2(0, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_82xqe"]
atlas = ExtResource("1_lh6ph")
region = Rect2(30, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyqgw"]
atlas = ExtResource("1_lh6ph")
region = Rect2(60, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_15ywx"]
atlas = ExtResource("1_lh6ph")
region = Rect2(90, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_ektn3"]
atlas = ExtResource("1_lh6ph")
region = Rect2(120, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm57k"]
atlas = ExtResource("1_lh6ph")
region = Rect2(150, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7417"]
atlas = ExtResource("1_lh6ph")
region = Rect2(180, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_do4fr"]
atlas = ExtResource("1_lh6ph")
region = Rect2(210, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_msft3"]
atlas = ExtResource("1_lh6ph")
region = Rect2(240, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lkyd"]
atlas = ExtResource("1_lh6ph")
region = Rect2(270, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh17g"]
atlas = ExtResource("1_lh6ph")
region = Rect2(300, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmj7w"]
atlas = ExtResource("1_lh6ph")
region = Rect2(330, 0, 30, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndhja"]
atlas = ExtResource("1_lh6ph")
region = Rect2(360, 0, 30, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_cwtei"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prooq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82xqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyqgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15ywx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ektn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm57k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7417")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do4fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msft3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lkyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh17g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmj7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndhja")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6qloa"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pho6t"]
friction = 0.0
bounce = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nueek"]
radius = 4.0

[node name="o_pedestrianLoiterer" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_cwtei")
centered = false
offset = Vector2(-15, -50)
script = ExtResource("2_xg1j2")

[node name="gossip_detection" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="gossip_detection"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_6qloa")
debug_color = Color(0.79, 0.431077, 0.0474, 0.0196078)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -2)
physics_material_override = SubResource("PhysicsMaterial_pho6t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_nueek")
debug_color = Color(0.83, 0.249, 0.74285, 0.027451)

[node name="o_Shadow" parent="." instance=ExtResource("3_vcs1l")]

[node name="GossipTimer" type="Timer" parent="."]
one_shot = true

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
position = Vector2(0, -2)
radius = 5.0
affect_navigation_mesh = true

[connection signal="body_entered" from="gossip_detection" to="." method="_on_gossip_detection_body_entered"]
